<resources>
    <string name="app_name">Rodzilla</string>
    <string name="rodentSightingsText">Number of Rodent Sightings Today!</string>
    <string name="enterUsername">Enter Your Username</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loggedOut">You have successfully logged out.</string>
    <string name="logout">Logout</string>
    <string name="enterName">Enter Your Name</string>
    <string name="registerNewAccount">Register a New Account</string>
    <string name="enterAUsername">Enter a Username</string>
    <string name="enterAPassword">Enter a Password</string>
    <string name="cancel">Cancel</string>
    <string name="Register">Register!</string>
    <string name="Name">Name:</string>
    <string name="Password">Password:</string>
    <string name="Admin">Admin:</string>
    <string name="Username">Username:</string>
    <string name="ListofRecentRatSightings">List of Recent Rat Sightings</string>
    <string name="SubmitARatSighting">Submit a Rat Sighting!</string>
    <string name="TellUsAboutRat">Tell us about where you saw the rat.</string>
    <string name="EnterLocationType">Enter the Location Type</string>
    <string name="streetName">Street Name:</string>
    <string name="EnterStreetName">Enter the Street Name</string>
    <string name="cityTextView">City:</string>
    <string name="EnterCity">Enter the City</string>
    <string name="EnterZipCode">Enter the Zip code</string>
    <string name="zipCodeTextView">Zip code:</string>
    <string name="boroughTextView">Enter the Borough</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">View Map</string>
    <string name="viewDataGraphs">View Data Graphs</string>
    <string name="enterDateRange">Enter the date range of the graph.</string>
    <string name="beginDate">Begin Date:</string>
    <string name="endDate">End Date:</string>
    <string name="ratSightingsBarGraphTitle">Number of Rat Sightings Over Specified Time Period</string>

</resources>
