<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ratInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="25px"
        android:text="@string/TellUsAboutRat"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/locationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EnterLocationType" />

    <Spinner
        android:id="@+id/locationTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/streetTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/streetName" />

    <EditText
        android:id="@+id/streetEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/EnterStreetName" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cityTextView" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/EnterCity" />

    <TextView
        android:id="@+id/zipcodeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zipCodeTextView" />

    <EditText
        android:id="@+id/zipcodeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/EnterZipCode" />

    <TextView
        android:id="@+id/boroughTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boroughTextView" />

    <Spinner
        android:id="@+id/boroughSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/submitSightingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/cancelSightingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>