<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rodzillaa.github.io.rodzilla.controller.WelcomeActivity">

    <Button
        android:id="@+id/submitARatSightingButton"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:text="@string/SubmitARatSighting"
        android:backgroundTint="#47d1ff"
        app:layout_constraintBottom_toTopOf="@+id/listOfRatSightingsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/listOfRatSightingsButton"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:text="@string/ListofRecentRatSightings"
        android:backgroundTint="#10ff27"
        app:layout_constraintTop_toBottomOf="@id/submitARatSightingButton"
        app:layout_constraintBottom_toTopOf="@+id/dataGraphs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/dataGraphs"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:text="@string/viewDataGraphs"
        android:backgroundTint="#efff10"
        app:layout_constraintBottom_toTopOf="@+id/mapViewButton"
        app:layout_constraintTop_toBottomOf="@id/listOfRatSightingsButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/mapViewButton"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:text="@string/view_map"
        android:backgroundTint="#ff8410"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/dataGraphs"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:text="@string/logout"
        android:backgroundTint="#ff474f"
        app:layout_constraintTop_toBottomOf="@id/mapViewButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>